--- a/styl.css
+++ b/styl.css
@@ -15,10 +15,12 @@ article header {
 }
 
 article section {
-    width: 710px;
+    width: 666px;
     float: left;
     background: white;
     border: 2px solid #006797;
+    box-shadow: 2px 2px 7px #1c2228;
+    padding: 20px;
 }
 
 h1 {
